# wlan_localization

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Kernel_density.ipynb  LICENSE  MODERNIZATION_COMPLETE.md  README.md  UJIIndoorLoc .ipynb  UJIIndoorLoc .md  UJIIndoorLoc EDA.ipynb  UJIIndoorLoc-machine-learning.ipynb  UJIIndoorLoc-preprocess.ipynb  UJIIndoorLoc-response-characteristics.ipynb  UJIIndoorLoc-response-classification.ipynb  pyproject.toml
.github/workflows/: ci.yml
configs/: cascade_optimal.yaml  default.yaml
data/: X_raw_holdout.csv  y_crossval.csv  y_holdout.csv
docs/: methodology.md
docs/api/: index.md
notebooks/: README.md  UJIIndoorLoc-response-classification.ipynb
scripts/: download_data.py
src/wlan_localization/: __init__.py
src/wlan_localization/cli/: __init__.py  evaluate.py  predict.py  train.py
src/wlan_localization/data/: __init__.py  loader.py  preprocessor.py
src/wlan_localization/evaluation/: __init__.py  metrics.py  visualizations.py
src/wlan_localization/models/: __init__.py  building_classifier.py  cascade.py  floor_classifier.py  position_regressor.py
src/wlan_localization/utils/: __init__.py  logger.py
tests/: conftest.py
tests/test_data/: test_preprocessor.py
tests/test_evaluation/: test_metrics.py
tests/test_models/: test_building_classifier.py  test_cascade_integration.py
